--- a/deciduous.html
+++ b/deciduous.html
@@ -9,14 +9,42 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="deciduous.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>VILD MAD</h1>
-    <p>Her skal der stå en masse spændende information eller noget</p>
+    <header>
+        <nav class="navbar">
+            <div class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+    <div class="section">
+        <img src="img/blok.webp" alt="blok" class="background">
+        <img src="img/dadelion.png" alt="" class="forgrund">
+    </div>
+    <div class="text">
+        <h1>DECIDUOUS FORREST</h1>
+    </div>
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
