arbejder på underside

--- a/deciduous.html
+++ b/deciduous.html
@@ -36,12 +36,25 @@
 
     <div class="section">
         <img src="img/blok.webp" alt="blok" class="background">
-        <img src="img/dadelion.png" alt="" class="forgrund">
     </div>
     <div class="text">
         <h1>DECIDUOUS FORREST</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione dolore nihil aliquam et sit necessitatibus
+            quasi amet, rerum aliquid iusto autem magni voluptatum tempore officiis illum dolores error! Sed, eveniet.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt rem qui porro aut velit quas. Enim nam
+            consequatur sapiente ut nostrum cupiditate odio, expedita tempore minima distinctio, cumque assumenda
+            necessitatibus?
+        </p>
     </div>
     </div>
+
+    <h1 class="plants">PLANTS</h1>
+    <h2>SORTED BY</h2>
+    <section class="cate">
+        <div class="names"><a href="#">NAME</a></div>
+        <div class="seasons"><a href="#">SEASON</a></div>
+        <div class="a_z"><a href="#">A-Z</a></div>
+    </section>
 
 
     <script src="script.js"></script>
