--- a/deciduous.html
+++ b/deciduous.html
@@ -56,6 +56,51 @@
         <div class="a_z"><a href="#">A-Z</a></div>
     </section>
 
+    <section class="plants_by">
+        <div class="plants_by_1">
+            <img src="img/baggrund_1.png" alt="">
+            <div class="des"><a href="#">PLANT</a></div>
+        </div>
+        <div class="plants_by_1">
+            <img src="img/baggrund_1.png" alt="">
+            <div class="des"><a href="#">PLANT</a></div>
+        </div>
+        <div class="plants_by_1">
+            <img src="img/baggrund_1.png" alt="">
+            <div class="des"><a href="#">PLANT</a></div>
+        </div>
+        <div class="plants_by_1">
+            <img src="img/baggrund_1.png" alt="">
+            <div class="des"><a href="#">PLANT</a></div>
+        </div>
+        <div class="plants_by_1">
+            <img src="img/baggrund_1.png" alt="">
+            <div class="des"><a href="#">PLANT</a></div>
+        </div>
+        <div class="plants_by_1">
+            <img src="img/baggrund_1.png" alt="">
+            <div class="des"><a href="#">PLANT</a></div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="foot">
+            <div class="project">
+                <p>A project initiated by</p>
+                <img src="img/mad.png" alt="">
+            </div>
+
+            <div class="partner">
+                <p>Developed in partnership with</p>
+                <div class="partner_pic">
+                    <img src="img/byhøst.png" alt="">
+                    <img src="img/naturvejleder.png" alt="">
+                    <img src="img/gojoin.png" alt="">
+                    <img src="img/tombola.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
