--- a/deciduous.html
+++ b/deciduous.html
@@ -98,6 +98,10 @@
                     <img src="img/gojoin.png" alt="">
                     <img src="img/tombola.png" alt="">
                 </div>
+                <div class="partner_pic_2">
+                    <img src="img/friluft.png" alt="">
+                    <img src="img/supertusch.png" alt="">
+                </div>
             </div>
         </div>
     </footer>
