--- a/deciduous.html
+++ b/deciduous.html
@@ -103,6 +103,14 @@
                     <img src="img/supertusch.png" alt="">
                 </div>
             </div>
+            <div class="sociale_medier">
+                <p>Social media</p>
+                <div class="social_pic">
+                    <img src="img/social.png" alt="">
+                    <img src="img/social.png" alt="">
+                    <img src="img/social.png" alt="">
+                </div>
+            </div>
         </div>
     </footer>
 
