--- a/category.html
+++ b/category.html
@@ -36,7 +36,7 @@
 
     <div class="section">
         <img src="img/blok.webp" alt="blok" class="background">
-        <img src="img/dadelion.png" alt="" class="forgrund">
+        <img src="img/dadelion.png" alt="" class="foreground">
     </div>
     <div class="text">
         <h1>DADELION</h1>
