--- a/deciduous.html
+++ b/deciduous.html
@@ -36,6 +36,9 @@
 
     <div class="section">
         <img src="img/blok.webp" alt="blok" class="background">
+        <img src="img/stick.png" alt="stick" class="foreground">
+        <img src="img/stick_2.png" alt="stick_2" class="middleground">
+        <img src="img/flower.png" alt="flower" class="foreground_2">
     </div>
     <div class="text">
         <h1>DECIDUOUS FORREST</h1>
