deciduous skabelon færdig

--- a/deciduous.html
+++ b/deciduous.html
@@ -36,8 +36,11 @@
 
     <div class="section">
         <img src="img/blok.webp" alt="blok" class="background">
+        <img src="img/stick.png" alt="" class="foreground">
+        <img src="img/stick_2.png" alt="" class="foreground_2">
+        <img src="img/flower.png" alt="" class="foreground_3">
     </div>
-    <div class="text">
+    <div class=" text">
         <h1>DECIDUOUS FORREST</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione dolore nihil aliquam et sit necessitatibus
             quasi amet, rerum aliquid iusto autem magni voluptatum tempore officiis illum dolores error! Sed, eveniet.
