--- a/season.html
+++ b/season.html
@@ -48,12 +48,20 @@
 
     <h1 class="season_explain">SEASONS WHERE THE DANDELION GROW</h1>
 
-    <div class="season_list">
-        <img src="img/baggrund_1.png" alt="">
-        <img src="img/baggrund_1.png" alt="">
-        <img src="img/baggrund_1.png" alt="">
-        <img src="img/baggrund_1.png" alt="">
-    </div>
+    <section class="season_list">
+        <div class="season_1"> <img src="img/baggrund_1.png" alt="">
+            <p>SEASON</p>
+        </div>
+        <div class="season_1"> <img src="img/baggrund_1.png" alt="">
+            <p>SEASON</p>
+        </div>
+        <div class="season_1"> <img src="img/baggrund_1.png" alt="">
+            <p>SEASON</p>
+        </div>
+        <div class="season_1"> <img src="img/baggrund_1.png" alt="">
+            <p>SEASON</p>
+        </div>
+    </section>
 
 
     <footer>
