template sat op og connectet til data

--- a/deciduous.html
+++ b/deciduous.html
@@ -50,7 +50,6 @@
         </p>
     </div>
     </div>
-
     <h1 class="plants">PLANTS</h1>
     <h2>SORTED BY</h2>
     <section class="cate">
@@ -58,34 +57,16 @@
         <div class="seasons"><a href="#">SEASON</a></div>
         <div class="a_z"><a href="#">A-Z</a></div>
     </section>
-
-    <section class="plants_by">
-        <div class="plants_by_1">
-            <img src="img/baggrund_1.png" alt="">
-            <div class="des"><a href="#">PLANT</a></div>
-        </div>
-        <div class="plants_by_1">
-            <img src="img/baggrund_1.png" alt="">
-            <div class="des"><a href="#">PLANT</a></div>
-        </div>
-        <div class="plants_by_1">
-            <img src="img/baggrund_1.png" alt="">
-            <div class="des"><a href="#">PLANT</a></div>
-        </div>
-        <div class="plants_by_1">
-            <img src="img/baggrund_1.png" alt="">
-            <div class="des"><a href="#">PLANT</a></div>
-        </div>
-        <div class="plants_by_1">
-            <img src="img/baggrund_1.png" alt="">
-            <div class="des"><a href="#">PLANT</a></div>
-        </div>
-        <div class="plants_by_1">
-            <img src="img/baggrund_1.png" alt="">
-            <div class="des"><a href="#">PLANT</a></div>
-        </div>
-    </section>
-
+    <article class="plants_by">
+        <template>
+            <section>
+                <div class="plants_by_1">
+                    <img src="img/baggrund_1.png" alt="">
+                    <div class="des"><a href="#">PLANT</a></div>
+                </div>
+            </section>
+        </template>
+    </article>
     <footer>
         <div class="foot">
             <div class="project">
