--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <div class="header">
+        <ul>
+            <li><a href="index.html">/ Forside </a></li>
+            <li><a href="category.html"> / Kategori </a></li>
+            <li><a href="deciduous.html"> / Decidous /</a></li>
+            <li><a href="plant.html"> / Plant /</a></li>
+        </ul>
+
+    </div>
+
     <h1>VILD MAD</h1>
     <p>Her skal der stå en masse spændende information eller noget</p>
 </body>
