billeder, tekst mm

--- a/location.html
+++ b/location.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="plant.css">
+    <link rel="stylesheet" href="location.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
@@ -45,18 +46,20 @@
         <a class="sea" href="season.html">
             <h2>SEASONS</h2>
         </a>
-        <a class="loc" href="location.html">
-            <h2>LOCATIONS</h2>
+        <a href="facts" href="plant.html">
+            <h2 class="facts">FACTS</h2>
         </a>
     </div>
 
-    <h1 class="fact">FACTS ABOUT DANDELIONS</h1>
-    <p class="fact_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto pariatur dolor iste. Vitae
-        mollitia quas
-        laudantium voluptate perspiciatis! Nihil deleniti suscipit debitis accusantium aliquam amet consequuntur
-        necessitatibus quod rem dolores? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus numquam
-        cum aut? Cumque voluptatum, dicta odit ullam nemo cupiditate totam. Earum facere libero pariatur tenetur cum
-        reprehenderit ea, totam fuga!</p>
+    <h1 class="place">PLACES WHERE THE DANDELIONS GROW</h1>
+
+    <section class="map_container">
+        <img src="img/phone.png" alt="" class="image-bottom">
+        <img src="img/maps.png" alt="" class="image-top">
+    </section>
+
+    <h1>ADDRESS</h1>
+    <p class="add">Lorem ipsum</p>
 
     <footer>
         <div class="foot">
