--- a/deciduous.html
+++ b/deciduous.html
@@ -24,10 +24,8 @@
                 <div class="bar"></div>
             </div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="Home">Home</a></li>
+                <li><a href="plant.html">Plants</a></li>
             </ul>
         </nav>
     </header>
@@ -51,8 +49,14 @@
     </div>
     </div>
 
-    <h1 class="plants">PLANTS</h1>
-    <h2>SORTED BY</h2>
+    <div class="plants_container">
+        <h1 class="plants">PLANTS</h1>
+    </div>
+    <div class="plants_container2">
+        <h2 class="plants_2">SORTED BY</h2>
+    </div>
+
+
     <section class="cate">
         <div class="names"><a href="#">NAME</a></div>
         <div class="seasons"><a href="#">SEASON</a></div>
