--- a/deciduous.html
+++ b/deciduous.html
@@ -50,13 +50,14 @@
         </p>
     </div>
     </div>
-    <h1 class="plants">PLANTS</h1>
-    <h2>SORTED BY</h2>
-    <section class="cate">
-        <div class="names"><a href="#">NAME</a></div>
-        <div class="seasons"><a href="#">SEASON</a></div>
-        <div class="a_z"><a href="#">A-Z</a></div>
-    </section>
+    <div class="plants_selector">
+        <h1>PLANTS</h1>
+        <h2>SORTED BY</h2>
+        <div class="selector">
+            <h2>season</h2>
+            <h2>a-z</h2>
+        </div>
+    </div>
     <article class="plants_by">
         <template>
             <section>
