--- a/deciduous.html
+++ b/deciduous.html
@@ -40,16 +40,11 @@
         <img src="img/stick_2.png" alt="" class="foreground_2">
         <img src="img/flower.png" alt="" class="foreground_3">
     </div>
-    <div class=" text">
-        <h1>DECIDUOUS FORREST</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione dolore nihil aliquam et sit necessitatibus
-            quasi amet, rerum aliquid iusto autem magni voluptatum tempore officiis illum dolores error! Sed, eveniet.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt rem qui porro aut velit quas. Enim nam
-            consequatur sapiente ut nostrum cupiditate odio, expedita tempore minima distinctio, cumque assumenda
-            necessitatibus?
-        </p>
+    <div class="text_felt">
+        <h1 class="name">DECIDUOUS FOREST</h1>
+        <p class="information">INFORMATION ABOUT FORREST HERE</p>
     </div>
-    </div>
+
     <div class="plants_selector">
         <h1>PLANTS</h1>
         <h2>SORTED BY</h2>
@@ -58,6 +53,7 @@
             <h2>a-z</h2>
         </div>
     </div>
+
     <article class="plants_by">
         <template>
             <section>
@@ -68,6 +64,8 @@
             </section>
         </template>
     </article>
+
+
     <footer>
         <div class="foot">
             <div class="project">
