--- a/coniferous.html
+++ b/coniferous.html
@@ -54,13 +54,15 @@
         </div>
     </div>
 
+    <main></main>
+
     <article class="plants_by">
         <template>
             <section>
-                <div class="plants_by_1">
+                <article class="plants_by_1">
                     <img src="img/baggrund_1.png" alt="">
-                    <div class="des"><a href="#">PLANT</a></div>
-                </div>
+                    <div class="des"><a href="plant.html">PLANT</a></div>
+                </article>
             </section>
         </template>
     </article>
