--- a/deciduous.html
+++ b/deciduous.html
@@ -59,7 +59,7 @@
             <section>
                 <div class="plants_by_1">
                     <img src="img/baggrund_1.png" alt="">
-                    <div class="des"><a href="#">PLANT</a></div>
+                    <div class="des"><a href="plant.html">PLANT</a></div>
                 </div>
             </section>
         </template>
