--- a/plant.html
+++ b/plant.html
@@ -36,7 +36,7 @@
         <img src="img/dadelion.png" alt="" class="foreground">
         <img src="img/stick.png" alt="" class="foreground_2">
         <img src="img/flower_1.png" alt="" class="foreground_3">
-        <div class="text">
+        <div class="name">
             <h1>DANDELION</h1>
         </div>
     </div>
