brug ikke, der er fejl

--- a/coniferous.html
+++ b/coniferous.html
@@ -49,7 +49,7 @@
         <h1>PLANTS</h1>
         <h2>SORTED BY</h2>
         <div class="selector">
-            <h2>season</h2>
+            <h2 class="selector_season">season</h2>
             <h2>a-z</h2>
         </div>
     </div>
