--- a/plant.html
+++ b/plant.html
@@ -37,7 +37,7 @@
         <img src="img/stick.png" alt="" class="foreground_2">
         <img src="img/flower_1.png" alt="" class="foreground_3">
         <div class="name">
-            <h1>DANDELION</h1>
+            <h1></h1>
         </div>
     </div>
 
@@ -46,13 +46,18 @@
         <h2 class="loc">LOCATIONS</h2>
     </div>
 
-    <h1 class="fact">FACTS ABOUT DANDELIONS</h1>
-    <p class="fact_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto pariatur dolor iste. Vitae
-        mollitia quas
-        laudantium voluptate perspiciatis! Nihil deleniti suscipit debitis accusantium aliquam amet consequuntur
-        necessitatibus quod rem dolores? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus numquam
-        cum aut? Cumque voluptatum, dicta odit ullam nemo cupiditate totam. Earum facere libero pariatur tenetur cum
-        reprehenderit ea, totam fuga!</p>
+    <main></main>
+
+
+    <template>
+        <article class="plant_info">
+            <h1 class="plant_name"></h1>
+            <p class="facts_plant"></p>
+            <p class="where_to_find"></p>
+            <p class="when_to_find"></p>
+        </article>
+    </template>
+
 
     <footer>
         <div class="foot">
@@ -77,7 +82,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="plant.js"></script>
     <script src="burgermenu.js"></script>
 </body>
 
