--- a/plant.html
+++ b/plant.html
@@ -46,6 +46,13 @@
         <h2 class="loc">LOCATIONS</h2>
     </div>
 
+    <template>
+        <h1 class="plant_name"></h1>
+        <p class="plant_fact"></p>
+        <p class="where_to_find"></p>
+        <p class="when_to_find"></p>
+    </template>
+    
     <h1 class="fact">FACTS ABOUT DANDELIONS</h1>
     <p class="fact_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto pariatur dolor iste. Vitae
         mollitia quas
