knapper der scroll

--- a/plant.html
+++ b/plant.html
@@ -42,17 +42,13 @@
                 <img src="img/dadelion.png" alt="" id="profile_img">
             </div>
             <div class="buttons">
-                <h2 class="sea">SEASONS</h2>
-                <h2 class="loc">LOCATIONS</h2>
+                <button type="button" class="sea">SEASONS</button>
+                <button type="button" class="loc">LOCATIONS</button>
             </div>
             <div class="grid_maintext">
                  <div>
                     <h2>Description</h2>
                     <p class="desc"></p>
-                </div>
-                <div>
-                    <h2>Where to find:</h2>
-                    <p class="where_to_find"></p>
                 </div>
                 <div>
                     <h2>How to spot:</h2>
@@ -62,7 +58,11 @@
                     <h2>How to pick:</h2>
                     <p class="how_to_pick"></p>
                 </div>
-                <div>
+                 <div id="where">
+                    <h2>Where to find:</h2>
+                    <p class="where_to_find"></p>
+                </div>
+                <div id="when">
                     <h2>When to find:</h2>
                     <p class="when_to_find"></p>
                 </div>
