--- a/coniferous.html
+++ b/coniferous.html
@@ -1,98 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="deciduous.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="deciduous.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav class="navbar">
-            <div class="burger-menu">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
-            <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+      <nav class="navbar">
+        <div class="burger-menu">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
-
-
     <div class="section">
-        <img src="img/blok.webp" alt="blok" class="background">
-        <img src="img/stick.png" alt="" class="foreground">
-        <img src="img/stick_2.png" alt="" class="foreground_2">
-        <img src="img/flower.png" alt="" class="foreground_3">
+      <img src="img/blok.webp" alt="blok" class="background" />
+      <img src="img/stick.png" alt="" class="foreground" />
+      <img src="img/stick_2.png" alt="" class="foreground_2" />
+      <img src="img/flower.png" alt="" class="foreground_3" />
     </div>
     <div class="text_felt">
-        <h1 class="name">CONIFEROUS FOREST</h1>
-        <p class="information">INFORMATION ABOUT FORREST HERE</p>
+      <h1 class="name">CONIFEROUS FOREST</h1>
+      <p class="information">INFORMATION ABOUT FORREST HERE</p>
     </div>
 
     <div class="plants_selector">
-        <h1>PLANTS</h1>
-        <h2>SORTED BY</h2>
-        <div class="selector">
-            <h2>season</h2>
-            <h2>a-z</h2>
-        </div>
+      <h1>PLANTS</h1>
+      <h2>SORTED BY</h2>
+      <div class="selector">
+        <h2>season</h2>
+        <h2>a-z</h2>
+      </div>
     </div>
 
     <main></main>
 
     <article class="plants_by">
-        <template>
-            <section>
-                <article class="plants_by_1">
-                    <img src="img/baggrund_1.png" alt="">
-                    <div class="des"><a href="plant.html">PLANT</a></div>
-                </article>
-            </section>
-        </template>
+      <template>
+        <section>
+          <article class="plants_by_1">
+            <img src="img/baggrund_1.png" alt="" />
+            <div class="des"><a href="plant.html">PLANT</a></div>
+          </article>
+        </section>
+      </template>
     </article>
 
-
     <footer>
-        <div class="foot">
-            <div class="project">
-                <p>A project initiated by</p>
-                <img src="img/mad.png" alt="">
-            </div>
-
-            <div class="partner">
-                <p>Developed in partnership with</p>
-                <div class="partner_pic">
-                    <img src="img/byhøst.png" alt="">
-                    <img src="img/naturvejleder.png" alt="">
-                    <img src="img/gojoin.png" alt="">
-                    <img src="img/tombola.png" alt="">
-                </div>
-                <div class="partner_pic_2">
-                    <img src="img/friluft.png" alt="">
-                    <img src="img/supertusch.png" alt="">
-                </div>
-            </div>
+      <div class="foot">
+        <div class="project">
+          <p>A project initiated by</p>
+          <img src="img/mad.png" alt="" />
         </div>
+
+        <div class="partner">
+          <p>Developed in partnership with</p>
+          <div class="partner_pic">
+            <img src="img/byhøst.png" alt="" />
+            <img src="img/naturvejleder.png" alt="" />
+            <img src="img/gojoin.png" alt="" />
+            <img src="img/tombola.png" alt="" />
+          </div>
+          <div class="partner_pic_2">
+            <img src="img/friluft.png" alt="" />
+            <img src="img/supertusch.png" alt="" />
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script src="cat.js"></script>
     <script src="burgermenu.js"></script>
-</body>
-
+  </body>
 </html>
