--- a/plant.html
+++ b/plant.html
@@ -1,98 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="plant.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="plant.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav class="navbar">
-            <div class="burger-menu">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
-            <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-        <article>
-            <div class="grid1">
-                <div class="section">
-                        <img src="img/blok.webp" alt="" class="foreground">
-                        <img src="img/stick.png" alt="" class="foreground_2">
-                        <img src="img/flower_1.png" alt="" class="foreground_3">
-                </div>
-                <h1 class="name">DANDELION</h1>
-                <img src="img/dadelion.png" alt="" id="profile_img">
-            </div>
-            <div class="buttons">
-                <h2 class="sea">SEASONS</h2>
-                <h2 class="loc">LOCATIONS</h2>
-            </div>
-            <div class="grid_maintext">
-                 <div>
-                    <h2>Description</h2>
-                    <p class="desc"></p>
-                </div>
-                <div>
-                    <h2>Where to find:</h2>
-                    <p class="where_to_find"></p>
-                </div>
-                <div>
-                    <h2>How to spot:</h2>
-                    <p class="how_to_spot"></p>
-                </div>
-                <div>
-                    <h2>How to pick:</h2>
-                    <p class="how_to_pick"></p>
-                </div>
-                <div>
-                    <h2>When to find:</h2>
-                    <p class="when_to_find"></p>
-                </div>
-                <div class="grid1-1-1-1"></div>
-            </div>
-        </article>
-    <footer>
-        <div class="foot">
-            <div class="project">
-                <p>A project initiated by</p>
-                <img src="img/mad.png" alt="">
-            </div>
-            <div class="partner">
-                <p>Developed in partnership with</p>
-                <div class="partner_pic">
-                    <img src="img/byhøst.png" alt="">
-                    <img src="img/naturvejleder.png" alt="">
-                    <img src="img/gojoin.png" alt="">
-                    <img src="img/tombola.png" alt="">
-                </div>
-                <div class="partner_pic_2">
-                    <img src="img/friluft.png" alt="">
-                    <img src="img/supertusch.png" alt="">
-                </div>
-            </div>
+      <nav class="navbar">
+        <div class="burger-menu">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
         </div>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <article>
+      <div class="grid1">
+        <div class="section">
+          <img src="img/blok.webp" alt="" class="foreground" />
+          <img src="img/stick.png" alt="" class="foreground_2" />
+          <img src="img/flower_1.png" alt="" class="foreground_3" />
+        </div>
+        <h1 class="name">DANDELION</h1>
+        <img src="img/dadelion.png" alt="" id="profile_img" />
+      </div>
+      <div class="buttons">
+        <h2 class="sea">SEASONS</h2>
+        <h2 class="loc">LOCATIONS</h2>
+      </div>
+      <div class="grid_maintext">
+        <div>
+          <h2>Description</h2>
+          <p class="desc"></p>
+        </div>
+        <div>
+          <h2>Where to find:</h2>
+          <p class="where_to_find"></p>
+        </div>
+        <div>
+          <h2>How to spot:</h2>
+          <p class="how_to_spot"></p>
+        </div>
+        <div>
+          <h2>How to pick:</h2>
+          <p class="how_to_pick"></p>
+        </div>
+        <div>
+          <h2>When to find:</h2>
+          <p class="when_to_find"></p>
+        </div>
+        <div class="grid1-1-1-1"></div>
+      </div>
+    </article>
+    <footer>
+      <div class="foot">
+        <div class="project">
+          <p>A project initiated by</p>
+          <img src="img/mad.png" alt="" />
+        </div>
+        <div class="partner">
+          <p>Developed in partnership with</p>
+          <div class="partner_pic">
+            <img src="img/byhøst.png" alt="" />
+            <img src="img/naturvejleder.png" alt="" />
+            <img src="img/gojoin.png" alt="" />
+            <img src="img/tombola.png" alt="" />
+          </div>
+          <div class="partner_pic_2">
+            <img src="img/friluft.png" alt="" />
+            <img src="img/supertusch.png" alt="" />
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script src="burgermenu.js"></script>
     <script src="plant.js"></script>
-</body>
-
+  </body>
 </html>
