contact uden menu

--- a/contact.html
+++ b/contact.html
@@ -7,23 +7,16 @@
     <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="burgermenu.js" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="deciduous.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <div class="burger-menu">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
-        <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+    <header></header>
     <main>
       <div class="indsend_indhold">
         <form
@@ -32,7 +25,7 @@
           method="post"
           enctype="multipart/form-data"
         >
-          Indsend dine fund
+          <h1>Indsend dine fund</h1>
           <label for="fornavn">Fornavn</label>
           <input
             placeholder="fx Jens"
