--- a/plant.html
+++ b/plant.html
@@ -24,17 +24,15 @@
                 <div class="bar"></div>
             </div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">Contact</a></li>
+
             </ul>
         </nav>
     </header>
         <article>
             <div class="grid1">
                 <div class="section">
-                        <img src="img/blok.webp" alt="" class="foreground">
                         <img src="img/stick.png" alt="" class="foreground_2">
                         <img src="img/flower_1.png" alt="" class="foreground_3">
                 </div>
