--- a/coniferous.html
+++ b/coniferous.html
@@ -39,10 +39,13 @@
         <img src="img/stick.png" alt="" class="foreground">
         <img src="img/stick_2.png" alt="" class="foreground_2">
         <img src="img/flower.png" alt="" class="foreground_3">
+        <img src="img/flower_1.png" alt="" class="foreground_4">
     </div>
     <div class="text_felt">
         <h1 class="name">CONIFEROUS FOREST</h1>
-        <p class="information">INFORMATION ABOUT FORREST HERE</p>
+        <p class="information">INFORMATION ABOUT FORREST HERE Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Doloremque ad nam, voluptatem sed consectetur expedita non ullam repellendus iste autem exercitationem
+            mollitia animi eos nobis accusantium vero quam cumque ab?</p>
     </div>
 
     <div class="plants_selector">
@@ -57,6 +60,8 @@
     <main></main>
 
     <article class="plants_by">
+        <div class="col_1"></div>
+        <div class="col_2"></div>
         <template>
             <section>
                 <article class="plants_by_1">
