--- a/deciduous.html
+++ b/deciduous.html
@@ -39,26 +39,34 @@
         <img src="img/stick.png" alt="" class="foreground">
         <img src="img/stick_2.png" alt="" class="foreground_2">
         <img src="img/flower.png" alt="" class="foreground_3">
+        <img src="img/flower_1.png" alt="" class="foreground_4">
     </div>
+
     <div class="text_felt">
         <h1 class="name">DECIDUOUS FOREST</h1>
-        <p class="information">INFORMATION ABOUT FORREST HERE</p>
+        <p class="information">INFORMATION ABOUT FORREST HERE Lorem ipsum dolor sit amet consectetur adipisicing
+            elit.
+            Doloremque ad nam, voluptatem sed consectetur expedita non ullam repellendus iste autem exercitationem
+            mollitia animi eos nobis accusantium vero quam cumque ab?</p>
     </div>
+
 
     <div class="plants_selector">
         <h1>PLANTS</h1>
         <h2>SORTED BY</h2>
         <div class="selector">
-            <h2>season</h2>
-            <h2>a-z</h2>
+            <h2 class="season_button">season</h2>
+            <h2 class="alphabetical_button">a-z</h2>
         </div>
     </div>
 
     <article class="plants_by">
+        <div class="col_1"></div>
+        <div class="col_2"></div>
         <template>
-            <section>
+            <section class="planter">
                 <div class="plants_by_1">
-                    <img src="img/baggrund_1.png" alt="">
+                    <img src="img/baggrund_1.png" alt="" class="billede_prøve">
                     <div class="des"><a href="plant.html">PLANT</a></div>
                 </div>
             </section>
@@ -85,6 +93,9 @@
                     <img src="img/friluft.png" alt="">
                     <img src="img/supertusch.png" alt="">
                 </div>
+            </div>
+            <div class="social">
+                <p>Social media</p>
             </div>
         </div>
     </footer>
